[package]
name = "mitosis"
version = "0.1.1"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/Manishearth/mitosis"
description = "Crate providing the ability to spawn processes with custom closures"

[dependencies]
ipc-channel = "0.20.2"
serde = { version = "1.0.130", features = ["derive"] }
